--- a/estilo_inicial.css
+++ b/estilo_inicial.css
@@ -27,7 +27,7 @@ body
 
 .D1
 {
-    width: 100%;
+    width: 120%;
     height: 32vh;
     background-color: rgba(255, 255, 255, 0.633);
     display: flex;
@@ -270,20 +270,21 @@ body
 .D11
 {
    
-    width: 100%;
+    width:200%;
     top:80px;
     height: 15px;
     background-color: rgb(44, 119, 119);
     position: fixed;
     top:250px;
     z-index: 0;
+    margin-left:500px
    
     
 }
 .D12
 {
    
-    width: 80%;
+    width: 130%;
     height: 82px;
     background-color: rgb(44, 119, 119);
     display: flex;
@@ -294,6 +295,7 @@ body
     justify-items: center;
      border-radius: 9px;
      top:0px;
+     margin-left:660px
 
    
     
@@ -362,18 +364,18 @@ a
 }
 .linha2
 {
-    height: 350px;
+    height: 250px;
     width: 25%;
     display: flex;
     flex-direction:column;
     /*background-color: red;*/
-    margin-left: 30px;
+    margin-left: 0px;
     justify-content: space-around;
     justify-items: center;
     align-content: center;
     align-items: center; 
     font-size: 25px;
-    margin-top: -30px;
+    margin-top: 20px;
    
     
 
@@ -435,17 +437,18 @@ a
 }
 .carrossel
 {
-    height: 500px;
-    width: 55%;
+    height: 400px;
+    width: 45%;
     display: flex;
     flex-direction:row;
+    z-index: 1;
     
-    margin-left: 10px;
+   
     justify-items: center;
     align-content: center;
     align-items: center; 
-    margin-top:-100px ;
-    margin-left: 300px;
+    margin-top:-450px ;
+    margin-left:400px;
     overflow: hidden;
 
 }
@@ -504,7 +507,7 @@ a
  top:95px;
  left:50px;
 }
-.central
+/*.central
 {
     cursor: pointer;
     position: absolute;
@@ -525,12 +528,12 @@ a
 .op1
 {
     position: absolute;
-    width: 50px; /*140*/
+    width: 50px; 
     height: 50px;
     border-radius: 25px;
     background-color: rgb(47, 112, 112);
-    top:505px;/*450*/
-    left: 35px;/*125*/
+    top:505px;
+    left: 35px;
     font-size: 20px;
     display: flex;
     flex-direction: row;
@@ -546,12 +549,12 @@ a
 .op2
 {
     position: absolute;
-    width: 50px; /*140*/
+    width: 50px; 
     height: 50px;
     border-radius: 25px;
     background-color: rgb(47, 112, 112);
-    top:505px;/*570*/
-    left:35px; /* 1280*/
+    top:505px;
+    left:35px; 
     font-size: 20px;
     display: flex;
     flex-direction: row;
@@ -582,11 +585,11 @@ a
 {
     background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
 
-}
+}*/
 .sininho1
 {
-    height:25vh;
-    width: 100%;
+    height:20vh;
+    width: 80%;
     justify-content: center;
     justify-items: center;
     align-content: center;
@@ -597,83 +600,142 @@ a
 {
     /*background-color: yellow;*/
     width: 300px;
-    height: 500px;
-    margin-left: 1270px;
-    margin-top:-300px;
+    height: 70px;
+    margin-left: 1250px;
+    margin-top:-50px;
+    z-index: 4;
 }
 .botaomenu
 {
     width: 60px;
     height: 60px;
-    background-color:rgb(47, 112, 112);
+    background-color:white;
     border-radius: 40px;
     margin-left:250px;
-    margin-top:240px;
+    margin-top:40px;
+    border-color: black;
+    border-style: solid;
+    border-width: 2px;
+    z-index: 10;
+    
 }
+
 .menu
 {
   margin-top: 10px;
   margin-left: 8px;
 }
+.botaomenu:hover
+{
+    background-color: rgb(44, 119, 119) ;
+}
 .botaoenvelope
 {
     width: 60px;
     height: 60px;
-    background-color:rgb(47, 112, 112);
+    background-color:white;
+    border-color:black;
     border-radius: 40px;
-    margin-top: -58px;
+    margin-top: -60px;
     margin-left: 170px;
-    
+    border-style: solid;
+    border-width: 2px;
+    animation: mostrar_botaoenvelope 2s forwards;
+}
+@keyframes mostrar_botaoenvelope
+{
+    0%{margin-top:-60px; margin-left:250px;}
+    100%{margin-Top:-63px; margin-left:170px}
 }
 .envelope
 {
     margin-left:14px;
     margin-top:14px
 }
+.botaoenvelope:hover
+{
+    background-color: rgb(44, 119, 119) ;
+}
 .botaoestrela
 {
     width: 60px;
     height: 60px;
-    background-color:rgb(47, 112, 112);
+    background-color:white;
     border-radius: 40px;
-    margin-top: -58px;
+    margin-top: -63px;
     margin-left: 90px;
-    
+    border-color: black;
+    border-style: solid;
+    border-width: 2px;
+    animation: mostrar_botaoestrela 2s forwards; 
+}
+@keyframes mostrar_botaoestrela
+{
+    0%{margin-top:-60px; margin-left:250px;}
+    100%{margin-Top:-63px; margin-left:90px}
 }
 .estrela 
 {
   margin-left:14px;
   margin-top: 13px;
 }
+.botaoestrela:hover
+{
+    background-color: rgb(44, 119, 119) ;
+}
 .botaorelogio
 {
     width: 60px;
     height: 60px;
-    background-color:rgb(47, 112, 112);
+    background-color:white;
     border-radius: 40px;
-    margin-top: -58px;
-    margin-left: 17px;
-    
+    margin-top: -64px;
+    margin-left: 10px;
+    border-color: black;
+    border-style: solid;
+    border-width: 2px;
+    animation: mostrar_botaorelogio 2s forwards; 
+}
+@keyframes mostrar_botaorelogio
+{
+    0%{margin-top:-60px; margin-left:250px;}
+    100%{margin-Top:-63px; margin-left:10px}
 }
 .relogio 
 {
     margin-top: 13px;
     margin-left: 15px;
 }
+.botaorelogio:hover
+{
+    background-color: rgb(44, 119, 119) ;
+}
 .botaoredes
 {
     width: 60px;
     height: 60px;
-    background-color:rgb(47, 112, 112);
+    background-color:white;
     border-radius: 40px;
-    margin-top: -58px;
-    margin-left: -60px;
-    
+    margin-top: -63px;
+    margin-left: -70px;
+    border-color: black;
+    border-style: solid;
+    border-width: 2px;
+    animation: mostrar_botaoredes 2s forwards; 
+}
+@keyframes mostrar_botaoredes
+{
+    0%{margin-top:-60px; margin-left:250px;}
+    100%{margin-Top:-63px; margin-left:-70px}
 }
 .insta
 {
    margin-left: 14px;
    margin-top: 12px;
+}
+.botaoredes:hover
+{
+    background-color: rgb(44, 119, 119) ;
 }
 
 
