--- a/estilo_doces.css
+++ b/estilo_doces.css
@@ -342,7 +342,7 @@ a
     justify-items: center;
     align-content: center;
     align-items: center; 
-    margin-top:230px ;
+    margin-top:150px ;
     margin-left: 15px;
     overflow: hidden;
    
@@ -400,7 +400,7 @@ a
     width: 60px;
     height: 60px;
     right: 30px;
-    top:745px;
+    top:685px;
     z-index: 10;
     
 }
@@ -411,14 +411,14 @@ a
     width: 60px;
     height: 60px;
     right: 1480px;
-    top:740px;
+    top:680px;
     z-index: 10;
 
 }
 .titulo
 {
     font-size: 60px;
-    top: 210px;
+    top: 150px;
     height: 200px;
     width: 200px;
     z-index: 10;
@@ -431,7 +431,7 @@ a
 {
     font-family: 'Dancing Script', cursive; 
     position: absolute;
-    top: 170px;
+    top: 120px;
     left:470px; 
     z-index: 10;
     font-size: 100px;
@@ -439,38 +439,88 @@ a
 }
 .personalize
 {
-    background-color: rgba(255, 255, 255, 0.613);
-    width: 350px;
-    height: 100px;
-    z-index: 100;
-    top:180px;
-    left: 1100px;
-    position:absolute;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-   
-    
+    top:50px;
+}
 
-   
-
-}
-.botaoescolha
-{
-    background-color:rgba(50, 102, 94, 0.589) ;
-    width: 300px;
-    height: 55px;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-    color:black;
-    font-family: 'Dancing Script', cursive; 
-    font-size: 30px;
-    
-}
-.personalize :hover
-{
-    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
-}
+.botaoescolha {
+    top:100px;
+  }
+  
+  .btn:link,
+  .btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    display: inline-block;
+    border-radius: 100px;
+    transition: all 0.2s;
+    position: absolute;
+  }
+  
+  .btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  }
+  
+  .btn:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  }
+  
+  .btn-white {
+    background-color:rgba(50, 102, 94, 0.994) ;
+    color:white;
+    top:700px;
+    left:600px;
+  }
+  
+  .btn::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top: 10;
+    left: 0;
+    z-index: -1;
+    transition: all 0.4s;
+  }
+  
+  .btn-white::after {
+    background-color:rgba(0, 0, 0, 0.414);
+  }
+  
+  .btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+  }
+  
+  .btn-animated {
+    -webkit-animation: moveInBottom 5s ease-out;
+            animation: moveInBottom 5s ease-out;
+    -webkit-animation-fill-mode: backwards;
+            animation-fill-mode: backwards;
+  }
+  
+  @-webkit-keyframes moveInBottom {
+    0% {
+      opacity: 0;
+      transform: translateY(30px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0px);
+    }
+  }
+  
+  @keyframes moveInBottom {
+    0% {
+      opacity: 0;
+      transform: translateY(30px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0px);
+    }
+  }
