--- a/estilo_inicial.css
+++ b/estilo_inicial.css
@@ -828,7 +828,7 @@ a
     top:280px;
     left:1200px;
     position: absolute;
-    z-index: 50;
+    z-index: 70;
     flex-direction: column;
     display: flex;
     opacity: 0;
@@ -924,11 +924,10 @@ html, body {
     top:280px;
     left:1200px;
     position: absolute;
-    z-index: 51;
+    z-index: 50;
     flex-direction: column;
     display: flex;
-    opacity: 1;
-    font-size: 15px;
+    opacity: 0;
     justify-content: center;
     justify-items: center;
     align-items: center;
@@ -944,6 +943,7 @@ html, body {
   
     
 }
+
 .ESTRELINHA2
 {
     height: 50px;
@@ -991,10 +991,188 @@ html, body {
 
 
 }
+
+.atendimento
+{
+    height: 400px;
+    width: 300px;
+    background-color: white;
+    top:280px;
+    left:1200px;
+    position: absolute;
+    z-index: 50;
+    flex-direction: column;
+    display: flex;
+    opacity: 0;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    align-content: center;
+    box-shadow:3px 3px rgba(0, 0, 0, 0.628) ;
+}
+.sociais
+{
+    height: 400px;
+    width: 300px;
+    background-color: white;
+    top:280px;
+    left:1200px;
+    position: absolute;
+    z-index: 50;
+    flex-direction: column;
+    display: flex;
+    opacity: 0;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    align-content: center;
+    box-shadow:3px 3px rgba(0, 0, 0, 0.628) ;
+}
 .LOGOESTRELA
 {
-    top:30px;
-    position: absolute;
+    MARGIN-TOP:-200PX
 }
-
+/*.btn.is-open ~ .description {
+    opacity: 0;
+  }
+  
+  
+  .btn {
+    display: block;
+    position: relative;
+    width: 200px;
+    height: 80px;
+    left: 100px;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    transition: width 0.8s cubic-bezier(0.23, 1, 0.32, 1), height 0.8s cubic-bezier(0.23, 1, 0.32, 1), transform 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transform-style: preserve-3d;
+    transform-origin: 50% 50%;
+    text-align: center;
+  }
+  
+  
+  .btn-front {
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    line-height: 80px;
+    background-color:rgb(39, 104, 104) ;
+    color: black;
+    cursor: pointer;
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    transition: background 0.15s ease, line-height 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  
+  
+  .btn-front:hover {
+    background-color: rgb(255, 255, 255);
+  }
+  
+  
+  .btn.is-open .btn-front {
+    pointer-events: none;
+    line-height: 160px;
+  }
+  
+  
+  .btn-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #eee;
+    color: #222;
+    transform: translateZ(-2px) rotateX(180deg);
+    overflow: hidden;
+    transition: box-shadow 0.8s ease;
+  }
+  
+  
+  .btn-back p {
+    margin-top: 27px;
+    margin-bottom: 25px;
+  }
+  
+  
+  .btn-back button {
+    padding: 12px 20px;
+    width: 30%;
+    margin: 0 5px;
+    background-color: transparent;
+    border: 0;
+    border-radius: 2px;
+    font-size: 1em;
+    cursor: pointer;
+    -webkit-appearance: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    transition: background 0.15s ease;
+  }
+  .btn-back button:focus {
+    outline: 0;
+  }
+  .btn-back button.yes {
+    background-color: rgb(39, 104, 104);
+    color: #fff;
+  }
+  .btn-back button.yes:hover {
+    background-color: rgb(39, 104, 104);
+  }
+  .btn-back button.no {
+    color:rgb(39, 104, 104);
+  }
+  .btn-back button.no:hover {
+    background-color: #ddd;
+  }
+  
+  
+  .btn.is-open .btn-back {
+    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.4);
+  }
+  
+  
+  .btn[data-direction=left] .btn-back,
+  .btn[data-direction=right] .btn-back {
+    transform: translateZ(-2px) rotateY(180deg);
+  }
+  
+  
+  .btn.is-open {
+    width: 400px;
+    height: 160px;
+  }
+  
+  
+  .btn[data-direction=top].is-open {
+    transform: rotateX(180deg);
+  }
+  
+  
+  .btn[data-direction=right].is-open {
+    transform: rotateY(180deg);
+  }
+  
+  
+  .btn[data-direction=bottom].is-open {
+    transform: rotateX(-180deg);
+  }
+  
+  
+  .btn[data-direction=left].is-open {
+    transform: rotateY(-180deg);
+  }
+  .cardápio
+  {
+     
+      height: 50px;
+      margin-top:-20px
+  }
+  .x
+  {
+      margin-left:0px;
+      margin-top:0px;
+      flex-direction: row;
+  }*/
+  
 
