--- a/estilo_login.css
+++ b/estilo_login.css
@@ -11,6 +11,7 @@ body
     align-items: center;
     align-content: center;
     display: flex;
+    position: relative;
 }
 .D1
 {
@@ -46,19 +47,17 @@ body
     justify-items: center;
     align-content: center;
     align-items: center; 
-    border-radius: 20px;
     flex-direction: column;
     border-style: solid;
-    border-color: black;
+    border-color: transparent;
 }
 .D3
 {
-    background-color: rgb(255, 255, 255);
-    width: 65%;
+    width: 95%;
     height: 10vh;
     flex-direction: row;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     justify-items: center;
     align-content: center;
     align-items: center;
@@ -66,13 +65,21 @@ body
 .botao
 {
     background-color: rgb(45, 128, 127);
-    width: 190px;
-    height: 50px;
+    width: 180px;
+    height: 40px;
     border-radius: 10px;
-    font-size: 18px;
+    font-size: 15px;
 }
 a
 {
     text-decoration: none;
     color: white;
+}
+.caixa
+{
+    width: 100%;
+    height: 4vh;
+    border-color:rgb(0, 0, 0);
+    border-style: solid;
+    border-radius: 5px;
 }
