--- a/estilo_moto.css
+++ b/estilo_moto.css
@@ -1,31 +1,58 @@
 body
 {
-    
-    font-family: "Audiowide", sans-serif;
+   
     background-image: url("fundo4.jpg");
-    overflow: hidden;
-    margin: 0;
-    padding: 0%;
-    width: 100%;
-    height: 100vh;
-
-   
-    
-   
-
+    flex-direction: column;
+    display: flex;
+    justify-content: space-around;
+    justify-items: flex-end;
+    align-content: center;
+    align-items: center; 
 }
-.motoboy
+.pedido
 {
-    width: 300px;
-    height: 200px;
-    margin-top:300px;
-    animation:motoboy2 7s infinite linear;
+    margin-top: 100px;
+    width: 850px;
+    height: 150px;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    justify-items: flex-end;
+    align-content: center;
+    align-items: center;
+    font-family: "Audiowide", sans-serif;
+    font-size: 30px;
 }
-@keyframes motoboy2
+.pedido2
 {
-    0%{left:0px;}
-
-    100%{left:1500px;}
-
-
+    margin-left: 55px;
+    margin-top: 20px;
+    width: 70%;
+    height: 50px;
+    font-family: "Pinyon Script" ;
+    font-size: 45px;
+}
+.motoca
+{
+    margin-left: -100px;
+    width:300px;
+    margin-top: 20px;
+}
+.pontinhos
+{
+    margin-top: 10px;
+    position: absolute;
+    top: 512px;
+    left: 715px; 
+    animation:flash 5s infinite linear;
+   font-size: 30px;
+   font-weight: bold
+}
+.logo
+{
+    width: 50px;
+    z-index: 1;
+    position: absolute;
+    margin-top:250px;
+    margin-left: -190px;
 }
