--- a/estilo_pagamento.css
+++ b/estilo_pagamento.css
@@ -1,7 +1,7 @@
 body
 {
     font-family: "Audiowide", sans-serif;
-    background-image: url("img/fundo4.jpg");
+    background-image: url("fundo4.jpg");
     overflow: hidden;
     margin: 0;
     padding: 0%;
@@ -330,7 +330,8 @@ a
 
 .preco
 {
-    width: 250px;
+    top: 213px;
+    width:10px;
     height: 70px;
     background-color: rgba(0, 0, 0, 0.562);
     display: flex;
@@ -339,10 +340,9 @@ a
      align-content: center;
      align-items: center; 
      flex-direction: column;
-     color:white;
-    TOP:270PX;
+    color:white;
     position: absolute;
-     bottom: 0px;
+    bottom: 0px;
 }
 .botaodeslizar
 {
@@ -373,10 +373,10 @@ a
 }
 .pagtitulo
 {
-    margin-top: 10vh;
-    margin-left: 91px;
+    margin-top: -20px;
+    margin-left: 8px;
     background-color: rgba(57, 143, 140, 0.906);
-    width: 20%;
+    width: 80%;
     height: 6vh;
     display: flex;
     align-content: center;
@@ -393,7 +393,7 @@ a
 .pagamento2
 {
     width: 100%;
-    height: 50vh;
+    height: 90vh;
     display: flex;
     flex-direction: row;
     align-content: center;
@@ -406,7 +406,7 @@ a
 {
     background: rgba(245, 247, 248, 0.793);
     width: 25%;
-    height: 50vh;
+    height: 65vh;
     display: flex;
     flex-direction: column;
     align-content: center;
@@ -414,8 +414,8 @@ a
     justify-content: center;
     justify-items: center;
     border-radius: 10px;
-    animation: fadeInLeft 2s;
-    margin-top: 12vh;
+    animation: backInUp 2s;
+    margin-top: 10vh;
     border-color: rgb(25, 92, 92);
     border-style: solid;
     border-radius: 20px;
@@ -425,19 +425,19 @@ a
 {
     background: rgba(245, 247, 248, 0.793);
     width: 30%;
-    height: 65vh;
+    height: 70vh;
     display: flex;
     flex-direction: column;
     align-content: center;
     align-items: center;
     justify-content: space-around;
     justify-items: center;
-    animation: fadeInLeft 2s;
+    animation: backInUp 2s;
     border-color: rgb(25, 92, 92);
     border-style: solid;
     border-radius: 20px;
     font-size: 25px;
-    margin-top: 10vh;
+    margin-top: 6vh;
 }
 .pagamento5
 {
@@ -453,7 +453,7 @@ a
     align-items: center;
     justify-content: center;
     justify-items: center;
-    animation: fadeInLeft 2s forwards;
+    animation: backInUp 2s forwards;
     margin-top: 10vh;
 }
 .certo
@@ -473,6 +473,7 @@ a
     border-style: solid;
     border-color: rgb(29, 114, 103);
     width: 40%;
+    margin-top: 10px;
 }
 .cartao
 {
@@ -488,6 +489,9 @@ a
     align-items: center;
     justify-content: space-evenly;
     justify-items: center;
+    cursor: pointer;
+    font-family: "Audiowide", sans-serif;
+    font-size: 25px;
 }
 .boleto
 {
@@ -503,6 +507,9 @@ a
     align-items: center;
     justify-content: space-evenly;
     justify-items: center;
+    cursor: pointer;
+    font-family: "Audiowide", sans-serif;
+    font-size: 25px;
 }.pix
 {
     background: rgba(32, 126, 133, 0.709);
@@ -517,6 +524,9 @@ a
     align-items: center;
     justify-content: space-evenly;
     justify-items: center;
+    cursor: pointer;
+    font-family: "Audiowide", sans-serif;
+    font-size: 25px;
 }
 .dinheiro
 {
@@ -532,7 +542,7 @@ a
     width: 287px;
     height: 51px;
     margin-left: -13px;
-    margin-top: 56px;
+    margin-top: 113px;
     background-color: rgba(0, 0, 0, 0.562);
     display: flex;
     justify-content: space-around;
@@ -575,6 +585,9 @@ a
     opacity: 0;
     width:54px; 
     margin-left:1px;
-    margin-top:1px;
-    
+    margin-top:1px;  
 }
+
+  
+ 
+
