--- a/css/estilo_doces.css
+++ b/css/estilo_doces.css
@@ -2,7 +2,7 @@ body
 {
     
     font-family: "Audiowide", sans-serif;
-    background-image: url("img/fundo4.jpg");
+    background-image: url("../img/fundo4.jpg");
     overflow: hidden;
     margin: 0;
     padding: 0%;
