--- a/css/estilo_pagamento.css
+++ b/css/estilo_pagamento.css
@@ -1,24 +1,20 @@
 body
 {
-    
     font-family: "Audiowide", sans-serif;
-    background-image: url("img/fundo4.jpg");
+    background-image: url("../img/fundo4.jpg");
     overflow: hidden;
     margin: 0;
     padding: 0%;
     width: 100%;
     height: 100vh;
-
-   
-    
-   
-
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    align-content: center;
 }
 .principal
 {
-
-   
-    /*border-color: brown;*/
+    border-color: brown;
     border-width: 5px;
     width: 100%;
     height: 99vh;
@@ -30,11 +26,11 @@ body
 }
 .logo
 {
-    width: 80px;
+    width: 4%;
     z-index: 11;
     position:absolute;
-    top:-5px;
-    left:30px;
+    top:3px;
+    left:20px;
 }
 
 .D2
@@ -45,24 +41,24 @@ body
     left:0px; 
     width: 100%;
     height: 30vh;
+    z-index:10;
 }
 .D3
 {
-    /*background-color: brown;*/
+   
     position: absolute;
     width: 60px;
     height: 60px;
     left: 190px;
     top:10px;
     display: flex;
-    flex-direction: row;
     justify-content: center;
     justify-items: center;
     align-items: center;
     align-content: center;
     cursor: pointer;
     border-radius: 40px;
-    z-index:10;
+    z-index:11;
 
 }
 .D4
@@ -185,13 +181,7 @@ body
     align-items: center;
     align-content: center;
     justify-items: center;
-
-     top:0px;
-     
-    
-     
-
-   
+    top:0px;
     
 }
 
@@ -210,25 +200,25 @@ body
 .D5:hover
 {
     background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
-
 }
 .D6:hover
-{
+{ 
     background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
+
 }
 .D8:hover
 {
     background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
-    
-
-    }
+}
 .D9:hover
 {
     background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
+
 }
 .D2:hover
 {
     background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
+
 }
 .D13
 {
@@ -254,30 +244,7 @@ body
     margin-left: 650px;
     z-index: 13px;
     margin-top:-130px ;
-    
-    
-
 }
-/* {
-    position: absolute;
-    top: 300px;
-    left:80px; 
-    background-color: black;
-    width: 500px;
-    height: 500px;
-}
-/*.imagemcoxinha
-{
-    position: absolute;
-    top: 300px;
-    left:80px;
-    width: 1000px;
-    height: 500px;
-
-}*/
-
-
-
 
 a
 {
@@ -294,10 +261,6 @@ a
     flex-direction:row;
     top: 140px;
     position: relative;
-
-
-   
-
 }
 
 .todas
@@ -307,7 +270,6 @@ a
     margin-left: 0px;
     animation: deslizar 2s;
     width: 400px;
-    
 }
 
 .img_legenda
@@ -339,9 +301,6 @@ a
     margin-top:230px ;
     margin-left: 15px;
     overflow: hidden;
-   
-    
-
 }
 
 .teste
@@ -367,14 +326,11 @@ a
  100% {margin-left:40px;}
 }
 
-
-
-
-
 .preco
 {
-    width: 250px;
-    height: 70px;
+    top: 235px;
+    width:240px;
+    height: 90px;
     background-color: rgba(0, 0, 0, 0.562);
     display: flex;
     justify-content: space-around;
@@ -382,11 +338,9 @@ a
      align-content: center;
      align-items: center; 
      flex-direction: column;
-     color:white;
-    TOP:270PX;
-    position: absolute;
-     bottom: 0px;
-
+    color:white;
+    position: relative;
+    bottom: 0px;
 }
 .botaodeslizar
 {
@@ -396,7 +350,6 @@ a
     right: 30px;
     top:745px;
     z-index: 10;
-    
 }
 .botaodeslizar2
 {
@@ -409,3 +362,230 @@ a
     z-index: 10;
 
 }
+/*FIM MENU NOVO*/
+.paggeral
+{
+    width: 100%;
+    height: 15vh;
+    
+}
+.pagtitulo
+{
+    margin-top: -20px;
+    margin-left: 8px;
+    background-color: rgba(57, 143, 140, 0.906);
+    width: 80%;
+    height: 6vh;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: space-around;
+    justify-items: center;
+    font-size: 15px;
+    animation: backInLeft 2s;
+    color: rgb(255, 255, 255);
+    border-color: rgba(253, 255, 255, 0.697);
+    border-style: solid;
+    border-radius: 20px;
+}
+.pagamento2
+{
+    width: 100%;
+    height: 90vh;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    align-items: center;
+    justify-content: space-around;
+    justify-items: center;
+    
+}
+.pagamento3
+{
+    background: rgba(245, 247, 248, 0.793);
+    width: 25%;
+    height: 65vh;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+    border-radius: 10px;
+    animation: backInUp 2s;
+    margin-top: 10vh;
+    border-color: rgb(25, 92, 92);
+    border-style: solid;
+    border-radius: 20px;
+    font-size: 18px;
+}
+.pagamento4
+{
+    background: rgba(245, 247, 248, 0.793);
+    width: 30%;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    justify-content: space-around;
+    justify-items: center;
+    animation: backInUp 2s;
+    border-color: rgb(25, 92, 92);
+    border-style: solid;
+    border-radius: 20px;
+    font-size: 25px;
+    margin-top: 6vh;
+}
+.pagamento5
+{
+    background: rgba(32, 126, 133, 0.709);
+    width: 25%;
+    height: 65vh;
+    border-color: rgba(253, 255, 255, 0.697);
+    border-style: solid;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+    animation: backInUp 2s forwards;
+    margin-top: 10vh;
+}
+.certo
+    {
+        background-color: rgb(189, 238, 189);
+        color: rgb(22, 107, 36);
+    }
+
+    .errado
+    {
+        background-color: rgba(124, 9, 9, 0.856);
+        color: white;
+    }
+.fild
+{
+    border-radius: 20px;
+    border-style: solid;
+    border-color: rgb(29, 114, 103);
+    width: 40%;
+    margin-top: 10px;
+}
+.cartao
+{
+    background: rgba(32, 126, 133, 0.709);
+    width: 90%;
+    height: 8vh;
+    border-color: rgba(253, 255, 255, 0.697);
+    border-style: solid;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    align-items: center;
+    justify-content: space-evenly;
+    justify-items: center;
+    cursor: pointer;
+    font-family: "Audiowide", sans-serif;
+    font-size: 25px;
+}
+.boleto
+{
+    background: rgba(32, 126, 133, 0.709);
+    width: 90%;
+    height: 8vh;
+    border-color: rgba(253, 255, 255, 0.697);
+    border-style: solid;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    align-items: center;
+    justify-content: space-evenly;
+    justify-items: center;
+    cursor: pointer;
+    font-family: "Audiowide", sans-serif;
+    font-size: 25px;
+}.pix
+{
+    background: rgba(32, 126, 133, 0.709);
+    width: 90%;
+    height: 8vh;
+    border-color: rgba(253, 255, 255, 0.697);
+    border-style: solid;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    align-items: center;
+    justify-content: space-evenly;
+    justify-items: center;
+    cursor: pointer;
+    font-family: "Audiowide", sans-serif;
+    font-size: 25px;
+}
+.dinheiro
+{
+    color: rgb(27, 98, 101);
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;   
+}
+.preco
+{
+    width: 287px;
+    height: 51px;
+    margin-left: -13px;
+    margin-top: 113px;
+    background-color: rgba(0, 0, 0, 0.562);
+    display: flex;
+    justify-content: space-around;
+    justify-items: flex-end;
+    align-content: center;
+    align-items: center; 
+    flex-direction: column;
+    color:white;
+    position: absolute;
+    bottom: 0px;
+}
+.confirmaPAG
+{
+    width: 60%;
+    height: 5vh;
+    background-color: #97f3ace4;
+    border-radius: 20px;
+    border-style: solid;
+    border-color: rgb(21, 71, 64);
+    font-family: "Audiowide", sans-serif;
+    cursor: pointer;
+    position: relative;
+}
+.btt
+{
+    width: 90%;
+    height: 9vh;
+    background-color:transparent;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    justify-items: center; 
+}
+.img_ok
+{
+    position: absolute;
+    top:0px;
+    left: 0px;
+    opacity: 0;
+    width:54px; 
+    margin-left:1px;
+    margin-top:1px;  
+}
+
+  
+ 
+
