--- a/css/estilo_perfil.css
+++ b/css/estilo_perfil.css
@@ -2,7 +2,7 @@ body
 {
     
     font-family: "Audiowide", sans-serif;
-    background-image: url("img/fundo4.jpg");
+    background-image: url("../img/fundo4.jpg");
     overflow: hidden;
     margin: 0;
     padding: 0%;
@@ -18,7 +18,7 @@ body
 {
 
    
-    /*border-color: brown;*/
+  /*  border-color: brown;*/
     border-width: 5px;
     width: 100%;
     height: 99vh;
@@ -185,7 +185,7 @@ body
     align-items: center;
     align-content: center;
     justify-items: center;
-     
+    
      top:0px;
      
     
@@ -204,28 +204,30 @@ body
 .D4:hover
 {
     background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
-
 }
 .D5:hover
 {
     background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
+
 }
 .D6:hover
 {
     background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
-
 }
 .D8:hover
 {
     background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
+
 }
 .D9:hover
 {
     background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
+
 }
 .D2:hover
 {
     background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
+
 }
 .D13
 {
@@ -291,7 +293,6 @@ a
     flex-direction:row;
     top: 140px;
     position: relative;
-   
 
 
    
@@ -324,12 +325,6 @@ a
     margin-top: 120px;
     background-color: rgba(50, 102, 94, 0.589);
 }
-.img_legenda:hover
-{
-        -webkit-transform: scale(0.9);
-        -ms-transform: scale(0.9);
-        transform: scale(0.9);
-}
 .carrossel
 {
     height: 500px;
@@ -340,7 +335,7 @@ a
     justify-items: center;
     align-content: center;
     align-items: center; 
-    margin-top:150px ;
+    margin-top:230px ;
     margin-left: 15px;
     overflow: hidden;
    
@@ -398,7 +393,7 @@ a
     width: 60px;
     height: 60px;
     right: 30px;
-    top:685px;
+    top:745px;
     z-index: 10;
     
 }
@@ -409,117 +404,8 @@ a
     width: 60px;
     height: 60px;
     right: 1480px;
-    top:680px;
+    top:740px;
     z-index: 10;
 
 }
-.titulo
-{
-    font-size: 60px;
-    top: 160px;
-    height: 200px;
-    width: 200px;
-    z-index: 10;
-    left:70px;
-    color: rgb(50, 102, 94);
-    position: absolute;
 
-}
-.subtitulo
-{
-    font-family: 'Dancing Script', cursive; 
-    position: absolute;
-    top: 120px;
-    left:470px; 
-    z-index: 10;
-    font-size: 100px;
-
-}
-
-.personalize
-{
-    top:50px;
-}
-
-.botaoescolha {
-    top:100px;
-  }
-  
-  .btn:link,
-  .btn:visited {
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 15px 40px;
-    display: inline-block;
-    border-radius: 100px;
-    transition: all 0.2s;
-    position: absolute;
-  }
-  
-  .btn:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-  }
-  
-  .btn:active {
-    transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-  }
-  
-  .btn-white {
-    background-color:rgba(50, 102, 94, 0.994) ;
-    color:white;
-    top:700px;
-    left:600px;
-  }
-  
-  .btn::after {
-    content: "";
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 100px;
-    position: absolute;
-    top: 10;
-    left: 0;
-    z-index: -1;
-    transition: all 0.4s;
-  }
-  
-  .btn-white::after {
-    background-color:rgba(0, 0, 0, 0.414);
-  }
-  
-  .btn:hover::after {
-    transform: scaleX(1.4) scaleY(1.6);
-    opacity: 0;
-  }
-  
-  .btn-animated {
-    -webkit-animation: moveInBottom 5s ease-out;
-            animation: moveInBottom 5s ease-out;
-    -webkit-animation-fill-mode: backwards;
-            animation-fill-mode: backwards;
-  }
-  
-  @-webkit-keyframes moveInBottom {
-    0% {
-      opacity: 0;
-      transform: translateY(30px);
-    }
-    100% {
-      opacity: 1;
-      transform: translateY(0px);
-    }
-  }
-  
-  @keyframes moveInBottom {
-    0% {
-      opacity: 0;
-      transform: translateY(30px);
-    }
-    100% {
-      opacity: 1;
-      transform: translateY(0px);
-    }
-  }
