--- a/css/estilo_salgados.css
+++ b/css/estilo_salgados.css
@@ -1,20 +1,24 @@
 body
 {
+    
     font-family: "Audiowide", sans-serif;
-    background-image: url("img/fundo4.jpg");
+    background-image: url("../img/fundo4.jpg");
     overflow: hidden;
     margin: 0;
     padding: 0%;
     width: 100%;
     height: 100vh;
-    flex-direction: column;
-    display: flex;
-    align-items: center;
-    align-content: center;
+
+   
+    
+   
+
 }
 .principal
 {
-    border-color: brown;
+
+   
+    /*border-color: brown;*/
     border-width: 5px;
     width: 100%;
     height: 99vh;
@@ -26,11 +30,11 @@ body
 }
 .logo
 {
-    width: 4%;
+    width: 80px;
     z-index: 11;
     position:absolute;
-    top:3px;
-    left:20px;
+    top:-5px;
+    left:30px;
 }
 
 .D2
@@ -41,24 +45,24 @@ body
     left:0px; 
     width: 100%;
     height: 30vh;
-    z-index:10;
 }
 .D3
 {
-   
+    /*background-color: brown;*/
     position: absolute;
     width: 60px;
     height: 60px;
     left: 190px;
     top:10px;
     display: flex;
+    flex-direction: row;
     justify-content: center;
     justify-items: center;
     align-items: center;
     align-content: center;
     cursor: pointer;
     border-radius: 40px;
-    z-index:11;
+    z-index:10;
 
 }
 .D4
@@ -181,7 +185,13 @@ body
     align-items: center;
     align-content: center;
     justify-items: center;
-    top:0px;
+     
+     top:0px;
+     
+    
+     
+
+   
     
 }
 
@@ -190,7 +200,6 @@ body
 .D3:hover
 {
     background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
-
 }
 .D4:hover
 {
@@ -202,7 +211,7 @@ body
     background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
 }
 .D6:hover
-{ 
+{
     background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
 
 }
@@ -213,12 +222,10 @@ body
 .D9:hover
 {
     background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
-
 }
 .D2:hover
 {
     background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
-
 }
 .D13
 {
@@ -244,7 +251,30 @@ body
     margin-left: 650px;
     z-index: 13px;
     margin-top:-130px ;
+    
+    
+
 }
+/* {
+    position: absolute;
+    top: 300px;
+    left:80px; 
+    background-color: black;
+    width: 500px;
+    height: 500px;
+}
+/*.imagemcoxinha
+{
+    position: absolute;
+    top: 300px;
+    left:80px;
+    width: 1000px;
+    height: 500px;
+
+}*/
+
+
+
 
 a
 {
@@ -261,6 +291,11 @@ a
     flex-direction:row;
     top: 140px;
     position: relative;
+   
+
+
+   
+
 }
 
 .todas
@@ -270,6 +305,7 @@ a
     margin-left: 0px;
     animation: deslizar 2s;
     width: 400px;
+    
 }
 
 .img_legenda
@@ -288,6 +324,12 @@ a
     margin-top: 120px;
     background-color: rgba(50, 102, 94, 0.589);
 }
+.img_legenda:hover
+{
+        -webkit-transform: scale(0.9);
+        -ms-transform: scale(0.9);
+        transform: scale(0.9);
+}
 .carrossel
 {
     height: 500px;
@@ -298,9 +340,12 @@ a
     justify-items: center;
     align-content: center;
     align-items: center; 
-    margin-top:230px ;
+    margin-top:150px ;
     margin-left: 15px;
     overflow: hidden;
+   
+    
+
 }
 
 .teste
@@ -326,11 +371,14 @@ a
  100% {margin-left:40px;}
 }
 
+
+
+
+
 .preco
 {
-    top: 235px;
-    width:240px;
-    height: 90px;
+    width: 250px;
+    height: 70px;
     background-color: rgba(0, 0, 0, 0.562);
     display: flex;
     justify-content: space-around;
@@ -338,9 +386,11 @@ a
      align-content: center;
      align-items: center; 
      flex-direction: column;
-    color:white;
-    position: relative;
-    bottom: 0px;
+     color:white;
+    TOP:270PX;
+    position: absolute;
+     bottom: 0px;
+
 }
 .botaodeslizar
 {
@@ -348,8 +398,9 @@ a
     width: 60px;
     height: 60px;
     right: 30px;
-    top:745px;
+    top:685px;
     z-index: 10;
+    
 }
 .botaodeslizar2
 {
@@ -358,234 +409,117 @@ a
     width: 60px;
     height: 60px;
     right: 1480px;
-    top:740px;
+    top:680px;
     z-index: 10;
 
 }
-/*FIM MENU NOVO*/
-.paggeral
+.titulo
 {
-    width: 100%;
-    height: 15vh;
-    
-}
-.pagtitulo
-{
-    margin-top: -20px;
-    margin-left: 8px;
-    background-color: rgba(57, 143, 140, 0.906);
-    width: 80%;
-    height: 6vh;
-    display: flex;
-    align-content: center;
-    align-items: center;
-    justify-content: space-around;
-    justify-items: center;
-    font-size: 15px;
-    animation: backInLeft 2s;
-    color: rgb(255, 255, 255);
-    border-color: rgba(253, 255, 255, 0.697);
-    border-style: solid;
-    border-radius: 20px;
-}
-.pagamento2
-{
-    width: 100%;
-    height: 90vh;
-    display: flex;
-    flex-direction: row;
-    align-content: center;
-    align-items: center;
-    justify-content: space-around;
-    justify-items: center;
-    
-}
-.pagamento3
-{
-    background: rgba(245, 247, 248, 0.793);
-    width: 25%;
-    height: 65vh;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    align-items: center;
-    justify-content: center;
-    justify-items: center;
-    border-radius: 10px;
-    animation: backInUp 2s;
-    margin-top: 10vh;
-    border-color: rgb(25, 92, 92);
-    border-style: solid;
-    border-radius: 20px;
-    font-size: 18px;
-}
-.pagamento4
-{
-    background: rgba(245, 247, 248, 0.793);
-    width: 30%;
-    height: 70vh;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    align-items: center;
-    justify-content: space-around;
-    justify-items: center;
-    animation: backInUp 2s;
-    border-color: rgb(25, 92, 92);
-    border-style: solid;
-    border-radius: 20px;
-    font-size: 25px;
-    margin-top: 6vh;
-}
-.pagamento5
-{
-    background: rgba(32, 126, 133, 0.709);
-    width: 25%;
-    height: 65vh;
-    border-color: rgba(253, 255, 255, 0.697);
-    border-style: solid;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    align-items: center;
-    justify-content: center;
-    justify-items: center;
-    animation: backInUp 2s forwards;
-    margin-top: 10vh;
-}
-.certo
-    {
-        background-color: rgb(189, 238, 189);
-        color: rgb(22, 107, 36);
-    }
+    font-size: 60px;
+    top: 160px;
+    height: 200px;
+    width: 200px;
+    z-index: 10;
+    left:70px;
+    color: rgb(50, 102, 94);
+    position: absolute;
 
-    .errado
-    {
-        background-color: rgba(124, 9, 9, 0.856);
-        color: white;
-    }
-.fild
-{
-    border-radius: 20px;
-    border-style: solid;
-    border-color: rgb(29, 114, 103);
-    width: 40%;
-    margin-top: 10px;
 }
-.cartao
+.subtitulo
 {
-    background: rgba(32, 126, 133, 0.709);
-    width: 90%;
-    height: 8vh;
-    border-color: rgba(253, 255, 255, 0.697);
-    border-style: solid;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: row;
-    align-content: center;
-    align-items: center;
-    justify-content: space-evenly;
-    justify-items: center;
-    cursor: pointer;
-    font-family: "Audiowide", sans-serif;
-    font-size: 25px;
-}
-.boleto
-{
-    background: rgba(32, 126, 133, 0.709);
-    width: 90%;
-    height: 8vh;
-    border-color: rgba(253, 255, 255, 0.697);
-    border-style: solid;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: row;
-    align-content: center;
-    align-items: center;
-    justify-content: space-evenly;
-    justify-items: center;
-    cursor: pointer;
-    font-family: "Audiowide", sans-serif;
-    font-size: 25px;
-}.pix
-{
-    background: rgba(32, 126, 133, 0.709);
-    width: 90%;
-    height: 8vh;
-    border-color: rgba(253, 255, 255, 0.697);
-    border-style: solid;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: row;
-    align-content: center;
-    align-items: center;
-    justify-content: space-evenly;
-    justify-items: center;
-    cursor: pointer;
-    font-family: "Audiowide", sans-serif;
-    font-size: 25px;
-}
-.dinheiro
-{
-    color: rgb(27, 98, 101);
-    display: flex;
-    align-content: center;
-    align-items: center;
-    justify-content: center;
-    justify-items: center;   
-}
-.preco
-{
-    width: 287px;
-    height: 51px;
-    margin-left: -13px;
-    margin-top: 113px;
-    background-color: rgba(0, 0, 0, 0.562);
-    display: flex;
-    justify-content: space-around;
-    justify-items: flex-end;
-    align-content: center;
-    align-items: center; 
-    flex-direction: column;
-    color:white;
+    font-family: 'Dancing Script', cursive; 
     position: absolute;
-    bottom: 0px;
-}
-.confirmaPAG
-{
-    width: 60%;
-    height: 5vh;
-    background-color: #97f3ace4;
-    border-radius: 20px;
-    border-style: solid;
-    border-color: rgb(21, 71, 64);
-    font-family: "Audiowide", sans-serif;
-    cursor: pointer;
-    position: relative;
-}
-.btt
-{
-    width: 90%;
-    height: 9vh;
-    background-color:transparent;
-    display: flex;
-    align-content: center;
-    align-items: center;
-    justify-content: center;
-    justify-items: center; 
-}
-.img_ok
-{
-    position: absolute;
-    top:0px;
-    left: 0px;
-    opacity: 0;
-    width:54px; 
-    margin-left:1px;
-    margin-top:1px;  
+    top: 120px;
+    left:470px; 
+    z-index: 10;
+    font-size: 100px;
+
 }
 
+.personalize
+{
+    top:50px;
+}
+
+.botaoescolha {
+    top:100px;
+  }
   
- 
-
+  .btn:link,
+  .btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    display: inline-block;
+    border-radius: 100px;
+    transition: all 0.2s;
+    position: absolute;
+  }
+  
+  .btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  }
+  
+  .btn:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  }
+  
+  .btn-white {
+    background-color:rgba(50, 102, 94, 0.994) ;
+    color:white;
+    top:700px;
+    left:600px;
+  }
+  
+  .btn::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top: 10;
+    left: 0;
+    z-index: -1;
+    transition: all 0.4s;
+  }
+  
+  .btn-white::after {
+    background-color:rgba(0, 0, 0, 0.414);
+  }
+  
+  .btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+  }
+  
+  .btn-animated {
+    -webkit-animation: moveInBottom 5s ease-out;
+            animation: moveInBottom 5s ease-out;
+    -webkit-animation-fill-mode: backwards;
+            animation-fill-mode: backwards;
+  }
+  
+  @-webkit-keyframes moveInBottom {
+    0% {
+      opacity: 0;
+      transform: translateY(30px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0px);
+    }
+  }
+  
+  @keyframes moveInBottom {
+    0% {
+      opacity: 0;
+      transform: translateY(30px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0px);
+    }
+  }
