--- a/css/estilo_index.css
+++ b/css/estilo_index.css
@@ -30,85 +30,19 @@ body
 {
     border-radius: 75px;
     position: absolute;
-    top: 300px;
-    left: 680px; 
+    top: 259px;
+    left: 667px; 
     animation: zoomIn 1s;
-    width:200px;
+    width:190px;
 }
 
-.chocolate
-{
-   
-    border-radius: 75px;
-    position: absolute;
-    top: 0px;
-    left: 0px; 
-    animation:chocolate01 4s infinite linear alternate;
-}
-@keyframes chocolate01
-{
-    100%{left:0px;top:30px}
 
-    0%{left:0px;top:0px}
-
-
-}
-.chocolate2
-{
-   
-    border-radius: 75px;
-    position: absolute;
-    top: 10px;
-    left: 798px;
-    animation:chocolate02 4s infinite linear alternate;
-    
-    z-index: 1;
-
-} 
-@keyframes chocolate02
-{
-    100%{left:798px;top:30px}
-
-    0%{top:0px}
-
-
-}
   
 
-.abelinha
-{
-   position: absolute;
-    top: 520px;
-    left: 0px; 
-    animation:abelinha2 7s infinite linear;
-    z-index: 0;
-    
-   
-}
-@keyframes abelinha2
-{
-    0%{left:0px;top:80px}
-
-    100%{left:1500px;top:80px}
-
-
-}
-.fundomarrom
-{
-    position: absolute;
-    top: 00px;
-    left: 0px; 
-}
-.fundomarrom2
-{
-    position: absolute;
-    top: 00px;
-    left: 800px; 
-}
 .loading
 {
     position: absolute;
-    top: 520px;
+    top: 500px;
     left: 720px; 
     font-weight: bold
     
@@ -117,9 +51,27 @@ body
 .pontinhos
 {
     position: absolute;
-    top: 512px;
+    top: 493px;
     left: 798px; 
     animation:flash 5s infinite linear;
    font-size: 25px;
    font-weight: bold
 }
+
+
+.carregando {
+  border: 4px solid #e5e5e5;
+  border-top-color: #EF5867;
+  height: 200px;
+  width: 200px;
+  margin-top:250px;
+  margin-left: 660px;
+  animation: is-rotating 1s infinite;
+  border-radius: 50%;
+}
+
+@keyframes is-rotating {
+    to {
+      transform: rotate(1turn);
+    }
+  }
